--- a/Front_EndDev/your_best_self/package.json
+++ b/Front_EndDev/your_best_self/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -20,7 +20,11 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "axios": "^1.6.2",
+    "axis": "^1.0.0",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "morgan": "^1.10.0",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.3.0",
