--- a/Front_EndDev/package.json
+++ b/Front_EndDev/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@auth0/auth0-angular": "^2.2.3",
     "axios": "^1.6.2",
     "axis": "^1.0.0",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "morgan": "^1.10.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.5",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
