--- a/Front_EndDev/package.json
+++ b/Front_EndDev/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@auth0/auth0-angular": "^2.2.3",
+    "@ng-icons/core": "^27.0.0",
+    "@ng-icons/heroicons": "^27.0.0",
     "axios": "^1.6.2",
     "axis": "^1.0.0",
     "bootstrap": "^5.3.2",
