--- a/Front_EndDev/package.json
+++ b/Front_EndDev/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
-    "prebuild": "ts-node scripts/set-env.ts",
+    "prebuild": "node scripts/set-env.js",
     "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
